tests/baselines/reference/jsdocOverrideTag1.errors.txt
tests/cases/conformance/jsdoc/0.js(27,5): error TS4114: This member must have an 'override' modifier because it overrides a member in the base class 'A'.
tests/cases/conformance/jsdoc/0.js(32,5): error TS4113: This member cannot have an 'override' modifier because it is not declared in the base class 'A'.
tests/cases/conformance/jsdoc/0.js(40,5): error TS4112: This member cannot have an 'override' modifier because its containing class 'C' does not extend another class.


==== tests/cases/conformance/jsdoc/0.js (3 errors) ====
    class A {
    
        /**
         * @method
         * @param {string | number} a
         * @returns {boolean}
         */
        foo (a) {
            return typeof a === 'string'
        }
        bar () {
    
        }
    }
    
    class B extends A {
        /**
         * @override
         * @method
         * @param {string | number} a
         * @returns {boolean}
         */
        foo (a) {
            return super.foo(a)
        }
    
        bar () {
        ~~~
!!! error TS4114: This member must have an 'override' modifier because it overrides a member in the base class 'A'.
    
        }
    
        /** @override */
        baz () {
        ~~~
!!! error TS4113: This member cannot have an 'override' modifier because it is not declared in the base class 'A'.
    
        }
    }
    
    
    class C {
        /** @override */
        foo () {
        ~~~
!!! error TS4112: This member cannot have an 'override' modifier because its containing class 'C' does not extend another class.
    
        }
    }